fixed header logo width on mobile

--- a/components/header.module.scss
+++ b/components/header.module.scss
@@ -98,7 +98,7 @@
     padding: 0.8rem 0;
     .logo {
       svg {
-        width: 285px;
+        width: auto;
         height: 50px;
       }
       &:nth-child(2) {
